<resources>
    <string name="app_name">Trip Divine</string>
    <string name="title_activity_notification_drawer">NotificationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Logout</string>

    <string name="menu_location">Location</string>
    <string name="menu_ahmedabad">Ahmedabad</string>
    <string name="menu_vadtal">Vadtal</string>
    <string name="menu_gadhada">Gadhada</string>
    <string name="menu_junagadh">Junagadh</string>
    <string name="menu_bhuj">Bhuj</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_maps">Map</string>

</resources>
