<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_location"
            android:title="@string/menu_location" />
        <item
            android:id="@+id/nav_ahmedabad"
            android:title="@string/menu_ahmedabad" />
        <item
            android:id="@+id/nav_bhuj"
            android:title="@string/menu_bhuj" />
        <item
            android:id="@+id/nav_vadtal"
            android:title="@string/menu_vadtal" />
        <item
            android:id="@+id/nav_gadhada"
            android:title="@string/menu_gadhada" />

        <item
            android:id="@+id/nav_junagadh"
            android:title="@string/menu_junagadh" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_feedback"
                android:title="@string/menu_feedback" />
            <!--<item
                android:id="@+id/nav_send"
                android:title="@string/menu_send" />-->
        </menu>
    </item>

</menu>
